virt/krun-sys/include/libkrun.h


int32_t krun_set_root_disk(uint32_t ctx_id, const char *disk_path);
int32_t krun_set_data_disk(uint32_t ctx_id, const char *disk_path);
int32_t krun_add_disk2(uint32_t ctx_id,
                       const char *block_id,
                       const char *disk_path,
                       uint32_t disk_format,
                       bool read_only);
 int32_t krun_add_disk3(uint32_t ctx_id,
                       const char *block_id,
                       const char *disk_path,
                       uint32_t disk_format,
                       bool read_only,
                       bool direct_io,
                       uint32_t sync_mode);
int32_t krun_set_mapped_volumes(uint32_t ctx_id, const char *const mapped_volumes[]);
int32_t krun_add_virtiofs(uint32_t ctx_id,
                          const char *c_tag,
                          const char *c_path);
int32_t krun_add_virtiofs2(uint32_t ctx_id,
                           const char *c_tag,
                           const char *c_path,
                           uint64_t shm_size);
int32_t krun_add_virtiofs3(uint32_t ctx_id,
                           const char *c_tag,
                           const char *c_path,
                           uint64_t shm_size,
                           bool read_only);
#define NET_FLAG_VFKIT (1 << 0)
int32_t krun_add_net_unixstream(uint32_t ctx_id,
                                const char *c_path,
                                int fd,
                                uint8_t *const c_mac,
                                uint32_t features,
                                uint32_t flags);
int32_t krun_add_net_unixgram(uint32_t ctx_id,
                              const char *c_path,
                              int fd,
                              uint8_t *const c_mac,
                              uint32_t features,
                              uint32_t flags);
int32_t krun_add_net_tap(uint32_t ctx_id,
                         char *c_tap_name,
                         uint8_t *const c_mac,
                         uint32_t features,
                         uint32_t flags);
int32_t krun_set_passt_fd(uint32_t ctx_id, int fd);
int32_t krun_set_gvproxy_path(uint32_t ctx_id, char *c_path);
int32_t krun_set_net_mac(uint32_t ctx_id, uint8_t *const c_mac);
int32_t krun_set_port_map(uint32_t ctx_id, const char *const port_map[]);