virt/krun-sys/src/bindings.rs

unsafe extern "C" {
    #[doc = " Adds a disk image to be used as a general partition for the microVM.\n\n This API is mutually exclusive with the deprecated krun_set_root_disk and\n krun_set_data_disk methods and must not be used together.\n\n SECURITY NOTE:\n See the security note for `krun_add_disk2`.\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"block_id\"    - a null-terminated string representing the partition.\n  \"disk_path\"   - a null-terminated string representing the path leading to the disk image.\n  \"disk_format\" - the disk image format (i.e. KRUN_DISK_FORMAT_{RAW, QCOW2})\n  \"read_only\"   - whether the mount should be read-only. Required if the caller does not have\n                  write permissions (for disk images in /usr/share).\n  \"direct_io\"   - whether to bypass the host caches.\n  \"sync_mode\"   - whether to enable VIRTIO_BLK_F_FLUSH. On macOS, an additional relaxed sync\n                  mode is available, which is enabled by default, and will not ask the drive\n                  to flush its buffered data.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_disk3(
        ctx_id: u32,
        block_id: *const ::core::ffi::c_char,
        disk_path: *const ::core::ffi::c_char,
        disk_format: u32,
        read_only: bool,
        direct_io: bool,
        sync_mode: u32,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " NO LONGER SUPPORTED. DO NOT USE.\n\n Configures the mapped volumes for the microVM. Only supported on macOS, on Linux use\n user_namespaces and bind-mounts instead. Not available in libkrun-SEV.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"mapped_volumes\" - an array of string pointers with format \"host_path:guest_path\" representing\n                     the volumes to be mapped inside the microVM\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_mapped_volumes(
        ctx_id: u32,
        mapped_volumes: *const *const ::core::ffi::c_char,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds an independent virtio-fs device pointing to a host's directory with a tag.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"c_tag\"          - tag to identify the filesystem in the guest.\n  \"c_path\"         - full path to the directory in the host to be exposed to the guest.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_virtiofs(
        ctx_id: u32,
        c_tag: *const ::core::ffi::c_char,
        c_path: *const ::core::ffi::c_char,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds an independent virtio-fs device pointing to a host's directory with a tag. This\n variant allows specifying the size of the DAX window.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"c_tag\"          - tag to identify the filesystem in the guest.\n  \"c_path\"         - full path to the directory in the host to be exposed to the guest.\n  \"shm_size\"       - size of the DAX SHM window in bytes.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_virtiofs2(
        ctx_id: u32,
        c_tag: *const ::core::ffi::c_char,
        c_path: *const ::core::ffi::c_char,
        shm_size: u64,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds an independent virtio-fs device pointing to a host's directory with a tag. This\n variant allows specifying the size of the DAX window and a read-only flag.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"c_tag\"          - tag to identify the filesystem in the guest.\n  \"c_path\"         - full path to the directory in the host to be exposed to the guest.\n  \"shm_size\"       - size of the DAX SHM window in bytes.\n  \"read_only\"      - if true, the filesystem will be exposed as read-only to the guest.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_virtiofs3(
        ctx_id: u32,
        c_tag: *const ::core::ffi::c_char,
        c_path: *const ::core::ffi::c_char,
        shm_size: u64,
        read_only: bool,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds an independent virtio-net device connected to a\n unixstream-based userspace network proxy, such as passt or\n socket_vmnet.\n\n The \"krun_add_net_*\" functions can be called multiple times for\n adding multiple virtio-net devices. In the guest the interfaces\n will appear in the same order as they are added (that is, the\n first added interface will be \"eth0\", the second \"eth1\"...)\n\n If no network interface is added, libkrun will automatically\n enable the TSI backend.\n\n Arguments:\n  \"ctx_id\"   - the configuration context ID.\n  \"c_path\"   - a null-terminated string representing the path\n               for the unixstream socket where the userspace\n               network proxy is listening. Must be NULL if \"fd\"\n               is not -1.\n  \"fd\"       - a file descriptor for an already open unixstream\n               connection to the userspace network proxy. Must\n               be -1 if \"c_path\" is not NULL.\n  \"c_mac\"    - MAC address as an array of 6 uint8_t entries.\n  \"features\" - virtio-net features for the network interface.\n  \"flags\"    - generic flags for the network interface.\n\n Notes:\n The arguments \"c_path\" and \"fd\" are mutually exclusive. If using\n \"fd\", the socket must be already initialized and configured as\n the userspace network proxy requires.\n If no network devices are added, networking uses the TSI backend.\n This function should be called before krun_set_port_map.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_net_unixstream(
        ctx_id: u32,
        c_path: *const ::core::ffi::c_char,
        fd: ::core::ffi::c_int,
        c_mac: *mut u8,
        features: u32,
        flags: u32,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds an independent virtio-net device with a unixgram-based\n backend, such as gvproxy or vmnet-helper.\n\n The \"krun_add_net_*\" functions can be called multiple times for\n adding multiple virtio-net devices. In the guest the interfaces\n will appear in the same order as they are added (that is, the\n first added interface will be \"eth0\", the second \"eth1\"...)\n\n If no network interface is added, libkrun will automatically\n enable the TSI backend.\n\n Arguments:\n  \"ctx_id\"   - the configuration context ID.\n  \"c_path\"   - a null-terminated string representing the path\n               for the unixstream socket where the userspace\n               network proxy is listening. Must be NULL if \"fd\"\n               is not -1.\n  \"fd\"       - a file descriptor for an already open unixstream\n               connection to the userspace network proxy. Must\n               be -1 if \"c_path\" is not NULL.\n  \"c_mac\"    - MAC address as an array of 6 uint8_t entries.\n  \"features\" - virtio-net features for the network interface.\n  \"flags\"    - generic flags for the network interface.\n\n Notes:\n The arguments \"c_path\" and \"fd\" are mutually exclusive. If using\n \"fd\", the socket must be already initialized and configured as\n the userspace network proxy requires.\n If no network devices are added, networking uses the TSI backend.\n This function should be called before krun_set_port_map.\n If using gvproxy in vfkit mode, NET_FLAG_VFKIT must be passed in\n \"flags\" when using \"c_path\" to indicate the connection endpoint.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_net_unixgram(
        ctx_id: u32,
        c_path: *const ::core::ffi::c_char,
        fd: ::core::ffi::c_int,
        c_mac: *mut u8,
        features: u32,
        flags: u32,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds an independent virtio-net device with the tap backend.\n Call to this function disables TSI backend.\n\n The \"krun_add_net_*\" functions can be called multiple times for\n adding multiple virtio-net devices. In the guest the interfaces\n will appear in the same order as they are added (that is, the\n first added interface will be \"eth0\", the second \"eth1\"...)\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"c_tap_name\"  - a null-terminated string representing the tap\n                  device name.\n  \"c_mac\"       - MAC address as an array of 6 uint8_t entries.\n  \"features\"    - virtio-net features for the network interface.\n  \"flags\"       - generic flags for the network interface.\n\n Notes:\n If no network devices are added, networking uses the TSI backend.\n This function should be called before krun_set_port_map.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_net_tap(
        ctx_id: u32,
        c_tap_name: *mut ::core::ffi::c_char,
        c_mac: *mut u8,
        features: u32,
        flags: u32,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " DEPRECATED. Use krun_add_net_unixstream instead.\n\n Configures the networking to use passt.\n Call to this function disables TSI backend to use passt instead.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"fd\"             - a file descriptor to communicate with passt\n\n Notes:\n If you never call this function, networking uses the TSI backend.\n This function should be called before krun_set_port_map.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_passt_fd(ctx_id: u32, fd: ::core::ffi::c_int) -> i32;
}
unsafe extern "C" {
    #[doc = " DEPRECATED. Use krun_add_net_unixgram instead.\n\n Configures the networking to use gvproxy in vfkit mode.\n Call to this function disables TSI backend to use gvproxy instead.\n\n Arguments:\n  \"ctx_id\"  - the configuration context ID.\n  \"c_path\"  - a null-terminated string representing the path for\n              gvproxy's listen-vfkit unixdgram socket.\n\n Notes:\n If you never call this function, networking uses the TSI backend.\n This function should be called before krun_set_port_map.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_gvproxy_path(ctx_id: u32, c_path: *mut ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the MAC address for the virtio-net device when using the passt backend.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"mac\"            - MAC address as an array of 6 uint8_t entries.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_net_mac(ctx_id: u32, c_mac: *mut u8) -> i32;
}
unsafe extern "C" {
    #[doc = " Configures a map of host to guest TCP ports for the microVM.\n\n Arguments:\n  \"ctx_id\"   - the configuration context ID.\n  \"port_map\" - an array of string pointers with format \"host_port:guest_port\"\n\n Returns:\n  Zero on success or a negative error number on failure.\n  Documented errors:\n       -ENOTSUP when passt networking is used\n\n Notes:\n  Passing NULL (or not calling this function) as \"port_map\" has a different meaning than\n  passing an empty array. The first one will instruct libkrun to attempt to expose all\n  listening ports in the guest to the host, while the second means that no port from\n  the guest will be exposed to host.\n\n  Exposed ports will only become accessible by their \"host_port\" in the guest too. This\n  means that for a map such as \"8080:80\", applications running inside the guest will also\n  need to access the service through the \"8080\" port.\n\n If past networking mode is used (krun_set_passt_fd was called), port mapping is not supported\n as an API of libkrun (but you can still do port mapping using command line arguments of passt)"]
    pub fn krun_set_port_map(ctx_id: u32, port_map: *const *const ::core::ffi::c_char) -> i32;
}
